2010-01-11  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* generators/scripts/inscop,
	* generators/scripts/inscop-fakearray: Remove misplaced '\n'.

2009-11-15  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* bin/pocc-snapshot: Update.

2009-11-15  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* bin/pocc-checkout: Update checkout_git, fix checkout_wget.

2009-11-15  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* tests/tests/gemver/gemver.plutotileparunroll.c: Fix test. Now
	the latest version of PLuTo generates "transform
	UnrollJam(ufactor=4)" on c3 and "transform Unroll(ufactor=4)" on
	c4, for S1 and S2. Formerly and in other versions it generates
	only "transform UnrollJam(ufactor=4)".

2009-11-15  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch adds the option --inscop-fakearray. When enabled, every
	statement of the form 'FAKEARRAY[xxx] = yyy' in the generated
	kernel will be modified to 'yyy'. The FAKEARRAY trick is useful to
	explicitly declare write dependences for Candl, for instance
	loop-carried dependences on a function call inside a loop.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/pocc/driver-codegen.c,
	* driver/src/options.h,
	* driver/src/options.c: Add option --inscop-fakearray to
	optionally call the inscop-fakearray script in place of the
	standard inscop.

	* generators/scripts/inscop-fakearray: New. Modified inscop to
	remove the FAKEARRAY[x] = ... from the generated code.

2009-11-14  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc/include/pocc/driver-letsee.h,
	* driver/src/pocc.c: Fixes.

2009-11-14  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch removes the driver-cloog, and explicitely call the
	polyhedral code generation process from within driver-codegen. It
	also creates driver-clastops, to separate Clast post-processing
	operations.

	* driver/pocc/driver-clastops.c,