@@ -1,3 +1,8 @@
+2010-01-12  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+
+	* generators/scripts/timercode: Add missing '\' before '\n'.
+	* gemver.c: Remove trailing '\n'.
+
 2010-01-11  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 
 	* generators/scripts/inscop,
